--- a/styles/globals.css
+++ b/styles/globals.css
@@ -288,3 +288,5 @@ button.danger {
   align-items: center;
 }
 .block{display: block!important}
+.blue-text{color: #3f51b5 !important;}
+.red-text{color: rgba(185, 28, 28, var(--tw-text-opacity)) !important;}
