--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,9 +14,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --blue: #0081cb;
-  height:100%
+  height: 100%;
 }
-
 
 a {
   color: inherit;
@@ -61,10 +60,19 @@ a {
   color: #f8ac41;
 }
 .app__anchor:hover {
-  text-decoration: underline!important;
+  text-decoration: underline !important;
   transition-timing-function: ease-in;
   transition: all 0.8s;
-  color: #5271ff!important;
+  color: #5271ff !important;
+}
+.app__anchor__block {
+  text-decoration: none;
+}
+.app__anchor__block:hover {
+  text-decoration: underline !important;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+  color: #5271ff !important;
 }
 button.success {
   background-color: #5271ff !important;
@@ -199,8 +207,15 @@ button.danger {
 .usticky {
   position: -webkit-sticky; /* for Safari */
   position: sticky;
-  top: 0;
+
   align-self: flex-start; /* <-- this is the fix */
+}
+
+.usticky-card {
+  box-shadow: 0 0 0 1px rgb(0 0 0 / 15%), 0 2px 3px rgb(0 0 0 / 20%);
+  transition: box-shadow 83ms;
+  position: relative;
+  overflow: hidden;
 }
 
 .no__data {
@@ -289,12 +304,61 @@ button.danger {
   place-content: center;
   align-items: center;
 }
-.MuiPickersDay-day{
+.MuiPickersDay-day {
   text-align: center;
   place-content: center;
   align-items: center;
 }
-.block{display: block!important}
-.blue-text{color: #3f51b5 !important;}
-.red-text{color: rgba(185, 28, 28, var(--tw-text-opacity)) !important;}
-.small-text {font-size:14px !important;}
+.block {
+  display: block !important;
+}
+.blue-text {
+  color: #3f51b5 !important;
+}
+.red-text {
+  color: rgba(185, 28, 28, var(--tw-text-opacity)) !important;
+}
+.small-text {
+  font-size: 14px !important;
+}
+.parent-grid {
+  grid-template-columns: 100px 1fr;
+}
+
+.zoom-9 {
+  zoom: 0.9;
+}
+
+ 
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .app__body {
+     
+ }}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {.app__body {
+  zoom:0.85
+}}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {.app__body {
+  zoom:0.87
+}}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {.app__body {
+  zoom:0.89
+}}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .app__body {
+   zoom:0.9
+  }
+}
+
+ 
