--- a/styles/Session.module.css
+++ b/styles/Session.module.css
@@ -195,4 +195,15 @@
 .session__description__clamp{
   height:4.3rem
 }
+.player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.player__wrapper {
+  position: relative;
+  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+}
  
