--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -5,7 +5,9 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #111;
+  opacity: 1;
+  background:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(40,179,32,1) 0%, rgba(120,142,114,0.8804564061952906) 0%, rgba(25,118,210,1) 100%, rgba(0,0,0,1) 100%);
+  
   text-align: center;
   margin-top:auto;
   position: fixed;
@@ -92,7 +94,7 @@
 .child__footer,
 .child__footer__copyright {
   font-size: 11px;
-   
+  color: lightblue !important;
 }
  
 .child__footer__copyright__instance {
