--- a/styles/Session.module.css
+++ b/styles/Session.module.css
@@ -1,4 +1,4 @@
-.session__card {
+.session__card ,.session__card__profile__timeline{
   transition: transform 450ms;
   cursor: pointer;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
@@ -57,6 +57,20 @@
   font-size: 0.5rem;
   color: darkgrey;
   margin-bottom: 2px;
+}
+
+.session__card__event__time__subtitle__profile__timeline {
+  background: #2196F3;
+  border: none;
+  outline: none;
+  /* border-radius: 7px; */
+   margin-top: 5px;
+  font-weight: 500;
+  display: inline-block;
+  padding: 8px;
+  font-size: 0.8rem;
+  color: #e2e2e2;
+  
 }
 
 .session__card__event__icon {
@@ -205,5 +219,11 @@
 .player__wrapper {
   position: relative;
   padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+}
+
+.session__card__profile__timeline:hover {
+  
+  opacity: 1;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 1) !important;
 }
  
