--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -103,6 +103,7 @@
 }
 .header__left {
   display: flex;
+  flex:70;
   gap:8px;
   margin-left: 5px;;
 }
@@ -118,7 +119,7 @@
   align-items: center;
   border-radius: 5px;
   height: 40px;
-  width:40vw;
+  
   color: gray;
   background-color: #eef3f8;
 }
@@ -126,7 +127,7 @@
   outline: none;
   border: none;
   background: none;
-  width: 35vw;
+   
 }
 .header__right {
   display: flex;
