--- a/styles/globals.css
+++ b/styles/globals.css
@@ -391,6 +391,17 @@ button.danger {
 .w-30vw{
   width: 30vw !important;
 }
+ 
+  
+.text{
+  display: inline;
+  width: 100%;
+}
+  
+.read-or-hide{
+  color: rgb(192,192,192);
+  cursor: pointer;
+}
 
 
 /* Extra small devices (phones, 600px and down) */
