--- a/styles/globals.css
+++ b/styles/globals.css
@@ -214,6 +214,12 @@ button.danger {
   font-size: 52px!important;
 }
 
+.avatar-md{
+  width: 100px !important;
+  height: 100px !important;
+  font-size: 26px!important;
+}
+
 .avatar-xs {
   width: 40px !important;
   height: 40px !important;
