--- a/styles/Counter.module.css
+++ b/styles/Counter.module.css
@@ -1,16 +1,11 @@
 .main {
-  display: flex;
   color: #5271ff;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 4rem;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  padding-bottom: 20px;
+ 
   font-weight: 600;
-  /* background-image: linear-gradient(to right, #6A03D6, black);
-     */
+  
 }
 .root {
   background-image: linear-gradient(to right, #fff, #fff);
@@ -54,6 +49,65 @@
   font-size: 2rem;
   font-weight: 800;
   padding-bottom: 0.8rem;
+}
+
+.card__counter{
+  box-shadow: 2px 2px 10px #DADADA;
+  margin: 5px;
+  padding: 10px 10px;
+  background-color: #fff;
+  height: 100px;
+  border-radius: 5px;
+  transition: .3s linear all;
+}
+
+.card__counter:hover{
+  box-shadow: 4px 4px 20px #DADADA;
+  transition: .3s linear all;
+}
+
+.card__counter.primary{
+  background-color: #007bff;
+  color: #FFF;
+}
+
+.card__counter.danger{
+  background-color: #ef5350;
+  color: #FFF;
+}  
+
+.card__counter.success{
+  background-color: #66bb6a;
+  color: #FFF;
+}  
+
+.card__counter.info{
+  background-color: #26c6da;
+  color: #FFF;
+}  
+
+.card__counter i{
+  font-size: 5em;
+  opacity: 0.2;
+}
+
+.card__counter .count__numbers{
+  
+  right: 35px;
+  top: 20px;
+  font-size: 32px;
+  
+}
+
+.card__counter .count__name{
+   
+  right: 35px;
+  top: 65px;
+  font-style: italic;
+  text-transform: capitalize;
+  opacity: 0.5;
+  
+  font-size: 18px;
 }
 @media (max-width: 640px) {
   .stats__title {
