--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,6 +78,12 @@ a {
   color: #111 !important;
 }
 
+.app__anchor__mini__footer:hover {
+  text-decoration: underline !important;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+}
+
 .app__anchor:hover {
   text-decoration: underline !important;
   transition-timing-function: ease-in;
