--- a/styles/globals.css
+++ b/styles/globals.css
@@ -377,6 +377,12 @@ button.danger {
   padding: 20px !important;
   overflow: hidden !important;
 }
+.rectangular-md-card-fullWidth{
+  width: 100%;
+  z-index: 1000 !important;
+  padding: 20px !important;
+  overflow: hidden !important;
+}
 
 .rectangular-md-card-fixed-height {
   height: 200px !important;
