--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,11 +96,11 @@ a {
   color: #5271ff !important;
 }
 
-.app__anchor__block {
+.app-anchor-block {
   text-decoration: none;
 }
 
-.app__anchor__block:hover {
+.app-anchor-block:hover {
   text-decoration: underline !important;
   transition-timing-function: ease-in;
   transition: all 0.8s;
@@ -600,6 +600,8 @@ CK EDITOR STYLE OVERRIDES
     zoom: 0.85;
   }
 }
+
+/**CK Editor Toolbar Media Queries for small devices*/
 
 @media (max-width: 425px) {
   body .ck.ck-toolbar-dropdown .ck.ck-toolbar .ck.ck-toolbar__items {
