--- a/styles/HeaderOption.module.css
+++ b/styles/HeaderOption.module.css
@@ -16,3 +16,10 @@
     height: 25px !important;
     width: 25px!important;
 }
+
+.headerOption__avatar{
+    font-size: small!important;
+    height: 25px !important;
+    width: 25px!important;
+    overflow: hidden
+}
