--- a/styles/globals.css
+++ b/styles/globals.css
@@ -382,6 +382,8 @@ button.danger {
   z-index: 1000 !important;
   padding: 20px !important;
   overflow: hidden !important;
+  max-height: 200px !important;
+  min-height: 200px !important;
 }
 
 .rectangular-md-card-fixed-height {
