--- a/styles/globals.css
+++ b/styles/globals.css
@@ -569,6 +569,8 @@ CK EDITOR STYLE OVERRIDES
   font-weight: revert;
 }
 
+span.underline-first::first-letter{text-decoration:underline!important}
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
